gsi-openssh (5.7-1+gt6.@distro@) @distro@; urgency=low

  * update to 5.7

 -- Globus Toolkit <support@globus.org>  Fri, 24 January 2014 10:51:35 -0500

gsi-openssh (5.6-1) unstable; urgency=low

  * update to 5.6

 -- Globus Toolkit <support@globus.org>  Tue, 02 Apr 2013 10:06:33 -0400

gsi-openssh (5.5-2) unstable; urgency=low

  * run autoconf before configuring to get updated configure macros, etc
  * add dependency on pkg-config so that -ledit detection works

 -- Globus Toolkit <support@globus.org>  Thu, 14 Mar 2013 11:19:39 -0400

gsi-openssh (5.5-1) unstable; urgency=low

  * Update to 5.5

 -- Globus Toolkit <support@globus.org>  Tue, 26 Jun 2012 18:41:36 -0400

gsi-openssh (5.4-1) unstable; urgency=low

  * Update to 5.4

 -- Globus Toolkit <support@globus.org>  Wed, 01 Jun 2011 20:42:22 -0400

gsi-openssh (5.3-0GT5.1.1a) unstable; urgency=low

  * Non-Maintainer Upload -- Update to Globus Toolkit 5.1.1

 -- Globus Toolkit <support@globus.org>  Wed, 01 Jun 2011 20:42:22 -0400