@@ -28,6 +28,12 @@ _docdir = $(_datadir)/doc
 
 DEB_BUILD_ARCH_CPU ?= $(shell dpkg-architecture -qDEB_BUILD_ARCH_CPU)
 
+ifneq (,$(filter $(DEB_HOST_ARCH_CPU), amd64 alpha ia64 s390x ppc64 sparc64))
+flavor = gcc64
+else
+flavor = gcc32
+endif
+
 sed: sed-stamp
 	:
 
